<resources>
    <string name="default_notification_channel_id">default</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="api_key">AIzaSyD_mPqpv43RBl7plkEhr49a4DJdtiMOkFw</string>
    <string name="app_name">WaterApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">526607717709373</string>
    <string name="fb_login_protocol_scheme">fb526607717709373</string>
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="password">Password</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.

    Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.

    Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="font_black">Roboto-Black.ttf</string>
    <string name="font_bold">Roboto-Bold.ttf</string>
    <string name="font_medium">Roboto-Medium.ttf</string>
    <string name="font_regular">Roboto-Regular.ttf</string>
    <string name="font_light">Roboto-Light.ttf</string>
    <string name="font_thin">Roboto-Thin.ttf</string>
    <string name="typeface_regular">Roboto-Regular.ttf</string>
    <string name="typeface_bold">Roboto-Bold_F.ttf</string>
    <string name="typeface_light">Roboto-Light_D.ttf</string>
    <string name="error_failure">Something went wrong. Please try again.</string>
    <string name="forgotpassword">Forgot Password</string>
    <string name="email">Email Address</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="connect_via">or connect via</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google+</string>
    <string name="guest_login">Guest Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email_address">Enter your email address</string>
    <string name="please_enter_your_email_address">To reset your password, please enter the\nemail address you provided in the sign up process</string>
    <string name="submit">Submit</string>
    <string name="enter_code">Enter Code</string>
    <string name="enter_your_4_digit_code_here">Enter your 4 digit code \n we\'ve sent you via email to continue</string>
    <string name="didnot_get_the_code_yet">Didn\'t get a code yet? Wait for %s seconds</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="terms_and_condition">By registering you agree to\nTerms &amp; Conditions</string>
    <string name="please_enter_pin">Please enter pin code</string>
    <string name="password_length">Minimum 6 characters required for Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="current_password">Enter Current Password</string>
    <string name="change_password">Change Password</string>
    <string name="about_app">About App</string>
    <string name="about">About</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us_text">Please feel free to Contact Us for\nany enquiries on the options below:</string>
    <string name="phone">(123) 456-7890</string>
    <string name="phone_hint">Phone Number</string>
    <string name="enter_email">Email Address is not valid</string>
    <string name="error">This field must not be empty</string>
    <string name="feedback_and_suggestions">Feedback and Suggestions</string>
    <string name="enter_your_message">Enter Your Message...</string>
    <string name="dummy_email">info@example.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="address">Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="select_supplier">Select Supplier</string>
    <string name="please_select_supplier">Please Select Supplier</string>
    <string name="update">Update</string>
    <string name="my_profile">My Profile</string>
    <string name="will_be_implemented_in_beta">Will be implemented in beta</string>
    <string name="bottle_text">How many bottles do you want as per your first delivery?</string>
    <string name="cost">Cost</string>
    <string name="total">Total</string>
    <string name="delivery_text">Your first delivery would reach you within 2 working days.</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="water_bottle">Water Bottle</string>
    <string name="added_to_cart">Added to your cart</string>
    <string name="service_rating">Service Rating</string>
    <string name="company_rating">Company Rating</string>
    <string name="ratings">Ratings</string>
    <string name="aed">AED</string>
    <string name="view_all">View all</string>
    <string name="products">Products</string>
    <string name="review">Reviews</string>
    <string name="please_wait">Please Wait...</string>
    <string name="message_logout">Are you sure you want\nto logout?</string>
    <string name="message_delete_item">Are you sure you want\nto delete this item from cart?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="attention">Attention</string>
    <string name="message_exit">Are you sure you want to exit?</string>
    <string name="notifications">Notifications</string>
    <string name="companies">Companies</string>
    <string name="service_charges">Service Charges</string>
    <string name="your_first_delivery_would_reach_text">Your first delivery would reach you within 2 working days.</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="cart">Cart</string>
    <string name="date">Date</string>
    <string name="enter_location">Enter Location</string>
    <string name="time_slot">Time Slot</string>
    <string name="comfirmation_delivery_text">Al Ain 5 Gallon as your first delivery would reach you within 2 working days</string>
    <string name="aquafina"><b>Aquafina</b> (x5)</string>
    <string name="continuee">Continue</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_id">Order ID</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_period">Delivery Period</string>
    <string name="cancel">Cancel</string>
    <string name="my_order">My Order</string>
    <string name="in_progress">In Progress</string>
    <string name="delivered">Delivered</string>
    <string name="confirmation">Confirmation</string>
    <string name="reorder">Reorder</string>
    <string name="by_registering">By registering you agree to\n<b>Terms &amp; Conditions</b></string>
    <string name="please_select_company">Please select company</string>
    <string name="pasword_change_sucess">Password changed successfully</string>
    <string name="guest">Guest</string>
    <string name="fill_imformation">Please fill complete information</string>
    <string name="please_login">Please login</string>
    <string name="permission_location_rationale">Location permission required</string>
    <string name="permission_location_denied">Please access Location permission to complete process</string>
    <string name="permission_location_neverask">Please access Location permission to complete process</string>
    <string name="permission_storage_rationale">Please enable storage permission to complete process</string>
    <string name="permission_storage_denied">Please access Storage permission to complete process</string>
    <string name="permission_storage_neverask">Please access Storage permission to complete process</string>
    <string name="null_response">Null response found</string>
    <string name="failure_response">Something went wrong. Please try again.</string>
    <string name="error_null">Something went wrong.</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="error_empty_list"></string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="your_cart_is_empty">Your cart is empty!</string>
    <string name="add_quantity">Please add quantity!</string>
    <string name="code_expires">Code expire in :</string>
    <string name="alert">Are you sure you want to cancel?</string>
    <string name="alertReorder">Are you sure you want to reorder on the today date?</string>
    <string name="makani_number_optional">Makani Number (Optional)</string>
    <string name="select_city">Select City</string>
    <string name="message_profile">Kindly go to my profile to fill\ncomplete profile details</string>
    <string name="message_vendor">Kindly go to menu, click on change\nvendor to select vendor.</string>
</resources>