<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="@drawable/bg_full_rounded_white"
    android:minWidth="@dimen/_270sdp"
    android:orientation="vertical">

    <com.ingic.waterapp.ui.views.AnyTextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_14sdp"
        tools:text="@string/logout"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:typeface="@string/typeface_regular" />

    <com.ingic.waterapp.ui.views.AnyTextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_24sdp"
        android:gravity="center"
        tools:text="@string/message_logout"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:typeface="@string/typeface_light" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/color_seperator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/dialog_yes"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/blue_theme"
            android:textSize="20sp" />

        <Button
            android:id="@+id/dialog_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/login_email_grey"
            android:textIsSelectable="false"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>

    <!--            android:background="?attr/selectableItemBackgroundBorderless"
    -->