<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.ingic.waterapp.fragments.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_about"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/about_app"
                android:background="@drawable/button_gradient"
                android:textColor="@drawable/selector_blue_white_text"
                android:textAllCaps="false"
                android:textSize="12sp"

                />
            <Button
                android:id="@+id/btn_about_terms"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/button_gradient"
                android:layout_weight="1"
                android:text="@string/terms_conditions"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textColor="@drawable/selector_blue_white_text"

                />
            <Button
                android:id="@+id/btn_about_privacyPolicy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_gradient"
                android:textColor="@drawable/selector_blue_white_text"
                android:text="@string/privacy_policy"
                android:textAllCaps="false"
                android:textSize="12sp"
                />
        </LinearLayout>

        <com.ingic.waterapp.ui.views.AnyTextView
            android:id="@+id/tv_about_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_14sdp"
            android:layout_marginRight="@dimen/_14sdp"
            android:lineSpacingExtra="@dimen/_2sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/forgot_grey"
            android:textSize="12sp"
            app:typeface="@string/typeface_light" />

    </RelativeLayout>
</LinearLayout>
