<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:fillViewport="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:isScrollContainer="true"
    android:scrollbars="none">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_16sdp"

        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:src="@drawable/forgot_logo" />

        <com.ingic.waterapp.ui.views.AnyTextView
            android:id="@+id/tv_forgotPassword_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/_4sdp"
            android:text="@string/enter_email_address"
            android:textColor="@color/forgot_dark_grey"
            android:textSize="20sp"
            app:typeface="@string/typeface_bold" />

        <com.ingic.waterapp.ui.views.AnyTextView
            android:id="@+id/tv_forgotPassword_enterEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_forgotPassword_text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_4sdp"
            android:text="@string/please_enter_your_email_address"
            android:textColor="@color/forgot_grey"
            android:textSize="14sp"
            app:typeface="@string/typeface_light" />


        <com.ingic.waterapp.ui.views.AnyEditTextView
            android:id="@+id/et_forgotPassword_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_forgotPassword_enterEmailText"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_28sdp"
            android:layout_marginRight="@dimen/_28sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/transparent"
            android:cursorVisible="true"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/_8sdp"
            android:gravity="start"
            android:hint="@string/email"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:paddingBottom="@dimen/_6sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_4sdp"
            android:paddingTop="@dimen/_6sdp"
            android:singleLine="true"
            android:textColor="@color/login_email_grey"
            android:textColorHint="@color/login_email_grey"
            android:textSize="14sp"
            app:testErrorString="@string/error_email_address_not_valid"
            app:testType="email"
            app:typeface="@string/typeface_light" />

        <View
            android:id="@+id/seperator1"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@id/et_forgotPassword_email"
            android:layout_marginLeft="@dimen/_28sdp"
            android:layout_marginRight="@dimen/_28sdp"
            android:background="@color/color_seperator_forgot" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/seperator1"
            android:layout_marginLeft="@dimen/_28sdp"
            android:layout_marginRight="@dimen/_28sdp"
            android:layout_marginTop="23dp"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

</ScrollView>